<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartPass</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_details">Please enter your SmartFile login information</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="remember_me">remember me</string>
    <string name="title_activity_password_list">PasswordList</string>

    <color name="OffBlack">#2D3233</color>
    <color name="Black">#000000</color>
    <color name="ExpandChildBackground">#FFFFFFFF</color>
    <color name="ExpandGroupBackground">#FF1091bf</color>

    <string name="new_folder">New Folder</string>
    <string name="new_account">New Account</string>
    <string name="search">Search</string>
    <string name="title_activity_new_account">NewAccount</string>
    <string name="website">Website Name</string>
    <string name="passwordlength">Password Length</string>
    <string name="twentyfour">24</string>
    <string name="special">Special Characters</string>
    <string name="numbers">Numbers</string>
    <string name="lowercase">Lowercase</string>
    <string name="uppercase">Uppercase</string>
    <string name="generate">Generate</string>
    <string name="folder_prompt">Choose a folder</string>

    <string-array name="folder_array">
        <item>Email</item>
        <item>Work</item>
        <item>Personal</item>
        <item>Banking</item>
    </string-array>

    <string name="title_activity_new_folder">NewFolder</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="folderName">Folder Name</string>
    <string name="NewLoginText">Create new</string>
    <string name="title_activity_new_login">NewLogin</string>
    <string name="title_activity_copy_to_clipboard">CopyToClipboard</string>
    <string name="title_activity_copy_password_to_clipboard">CopyPasswordToClipboard</string>
    <string name="deleteText">Delete</string>
    <string name="title_activity_delete_password">DeletePassword</string>
    <string name="selectapassword">Select a password to delete</string>
    <string name="loginn">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="noaccountyet">No account yet?</string>
    <string name="title_activity_clear_clipboard">ClearClipboard</string>
    <string name="enterFTPinformation">Enter SmartPass ftp username and password</string>
    <string name="emailText">email@website.com</string>
    <string name="fullName">Full Name</string>
    <string name="PleaseConfigureText">Please enter desired Name, Username, Email, and password</string>
    <string name="title_activity_new_smart_file_account">NewSmartFileAccount</string>
    <string name="pleaseEnterLoginDetailsText">Please enter your SmartFile FTP username and password</string>

</resources>