<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccount" >

    <LinearLayout
    	android:focusable="true" android:focusableInTouchMode="true"
    	android:layout_width="0px" android:layout_height="0px"/>
    
    <Spinner
        android:id="@+id/folderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/folder_prompt"
        android:entries="@array/folder_array"
        android:textColor="@color/OffBlack"
        android:prompt="@string/folder_prompt">
		</Spinner>
		
    <EditText
        android:id="@+id/newAcctUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/websiteNameEditText"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="@string/username"
        android:textColor="@color/OffBlack"
         />

    <EditText
        android:id="@+id/newAccountLengthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newAcctUsernameEditText"
        android:layout_below="@+id/newAcctUsernameEditText"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:text="@string/twentyfour"
        android:textColor="@color/OffBlack"
        android:width="45dp"
         >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/newAccountLengthEditText"
        android:layout_alignBottom="@+id/newAccountLengthEditText"
        android:layout_toRightOf="@+id/newAccountLengthEditText"
        android:text="@string/passwordlength"
        android:textColor="@color/OffBlack"
         />

    <CheckBox
        android:id="@+id/lowerCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newAccountLengthEditText"
        android:checked="true"
        android:textColor="@color/OffBlack"
        android:text="@string/lowercase" />

    <CheckBox
        android:id="@+id/upperCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lowerCheckBox"
        android:layout_alignBottom="@+id/lowerCheckBox"
        android:layout_toRightOf="@+id/lowerCheckBox"
        android:checked="true"
        android:textColor="@color/OffBlack"
        android:text="@string/numbers" />

    <CheckBox
        android:id="@+id/numberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lowerCheckBox"
        android:layout_below="@+id/lowerCheckBox"
        android:checked="true"
        android:textColor="@color/OffBlack"
        android:text="@string/uppercase">
        </CheckBox>
    

    <CheckBox
        android:id="@+id/specialCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upperCheckBox"
        android:layout_below="@+id/upperCheckBox"
        android:checked="true"
        android:textColor="@color/OffBlack"
        android:text="@string/special" />
    
    <EditText
        android:id="@+id/websiteNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberCheckBox"
        android:layout_below="@+id/folderSpinner"
        android:ems="10"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/OffBlack"
        android:text="@string/website" />

    <Button
        android:id="@+id/newAccountCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/solidrect"
        android:textColor="@color/OffBlack"
        android:width="159dp" />

    <Button
        android:id="@+id/newAccountCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/solidrect"
        android:minWidth="0dip"
        android:textColor="@color/OffBlack"
        android:width="159dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:src="@drawable/x_icon2" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numberCheckBox"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="28dp"
        android:src="@drawable/check_icon2" />

</RelativeLayout>