<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hope2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreen" >

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/outlinerect"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:selectAllOnFocus="true"
        android:text="@string/password"
        android:textColor="@color/OffBlack"
        android:width="200dp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_marginBottom="24dp"
        android:background="@drawable/outlinerect"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:paddingLeft="5dp"
        android:selectAllOnFocus="true"
        android:text="@string/username"
        android:textColor="@color/OffBlack"
        android:width="200dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:gravity="center"
        android:textColor="@color/OffBlack"
        android:text="@string/pleaseEnterLoginDetailsText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:background="@drawable/solidrect"
        android:maxHeight="21dp"
        android:minHeight="21dp"
        android:minWidth="200dp"
        android:text="@string/loginn"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</RelativeLayout>